[BUG-1673] Resolve Horizontal scrolling due to message-header and image
resolve message-header width issue,  image overflow and height issue \n added border-radius to images for design consistency

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -3,7 +3,6 @@
     position:relative;
     animation:animatetop 0.8s;
     // top: 100%; 
-    width: 100%;
     display: flex;
     // margin-bottom: 1rem;
     flex-direction: row;
@@ -32,7 +31,6 @@
         }
     }
     @media (max-width: 960px) {
-            width: 95%;
             font-size:.9rem;
             text-align: center;
             text-wrap:wrap;
