--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -149,7 +149,7 @@ header {
 .screenshot {
     display: block;
     box-shadow: var(--box-shadow-primary) !important;
-    border-radius: 2px;
+    border-radius: 5px;
     margin-left: auto;
     margin-right: auto;
     background: #868e96
@@ -164,9 +164,6 @@ section {
     padding: 50px 25px;
 }
 
-section + section {
-    padding-top: 0;
-}
 
 .subtext {
     margin-top: 10px;
